--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <title>Socket.IO chat</title>
     <style>
+      body { width:500px; height: 500px }
+      #thetable { width:50%; height: 50% }
       .cell { width: 20px; height: 20px; border: 1px solid black; }
     </style>
   </head>
   <body>
-    <table id="v" border="1">
+    <table id="thetable" border="1">
       <tr><td id="td11" class="cell"></td><td id="td12" class="cell"></td><td id="td13" class="cell"></td><td id="td14" class="cell"></td></tr>
       <tr><td id="td21" class="cell"></td><td id="td22" class="cell"></td><td id="td23" class="cell"></td><td id="td24" class="cell"></td></tr>
       <tr><td id="td31" class="cell"></td><td id="td32" class="cell"></td><td id="td33" class="cell"></td><td id="td34" class="cell"></td></tr>
